# SDL3D

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  COPYING  Coding.txt  Debugging.txt  Notes.txt  README.md  README.md~  Todo.txt  Usage.txt
docs/: Blender.txt  Coding.txt  Compiling.txt  Compiling.txt~  Dependencies.txt  Dependencies.txt~  Notes.txt  SpecialThanks.txt  TextureCompression.txt  TextureCompression.txt~  Todo.txt  Troubleshooting.txt  Troubleshooting.txt~  Tutorial.txt
info/: Coding.txt  Todo.txt  Usage.txt
lib/Box2D/include/: Directories.txt
lib/Box2D/lib/debug/: Box2D.lib
lib/Box2D/lib/release/: Box2D.lib
lib/LuaIntf/LuaIntf/: LuaIntf.h  LuaState.h
lib/LuaIntf/LuaIntf/impl/: CppBindClass.h
lib/SDL/SDL2-2.0.4/VisualC/SDL/Win32/Debug/: CL.read.1.tlog  CL.write.1.tlog  SDL2.lastbuildstate  link.command.1.tlog  link.write.1.tlog  mt.read.1.tlog  rc.command.1.tlog  version.res
lib/SDL/SDL2-2.0.4/VisualC/SDL/Win32/Release/: CL.read.1.tlog  SDL2.write.1.tlog  link.read.1.tlog  mt.read.1.tlog  rc.command.1.tlog
lib/SDL/SDL2-2.0.4/VisualC/SDLmain/Win32/Release/: CL.read.1.tlog  CL.write.1.tlog
lib/SDL/SDL2-2.0.4/VisualC/Win32/Debug/: SDL2.exp
lib/SDL/SDL2-2.0.4/VisualC/Win32/Release/: SDL2.exp
lib/SDL/lib/: SDL2.lib
lib/SDL2/SDL2-2.0.4/VisualC/SDL/Win32/Debug/: SDL2.write.1.tlog  cl.command.1.tlog  link.read.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.read.1.tlog  rc.write.1.tlog
lib/SDL2/SDL2-2.0.4/VisualC/SDL/Win32/Release/: CL.write.1.tlog  SDL2.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.write.1.tlog
lib/SDL2/SDL2-2.0.4/VisualC/SDLmain/Win32/Release/: Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
lib/SDL2/SDL2-2.0.4/VisualC/Win32/Debug/: SDL2.ilk  SDL2.lib
lib/SDL2/lib/: SDL2_mixer.lib  SDL2main.lib  native_midi.lib  timidity.lib
lib/glad/: glad.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/detail/: setup.hpp
lib/lua/: C++CompilingVisualStudio.bat  Compiling.txt
lib/lua/lib/: lua.lib
lib/lua/lua-5.3.2/src/: lua  lua.exp  luac  luac.exp  luac.lib
lib/tinyobjloader/: COPYING
resource/: Building.DDS  Building.mtl  Test.DDS  basic.f.glsl  basic.v.glsl  building2.dds  minecraft.dds  shaded.f.glsl  shaded.v.glsl  shadedF.f.glsl  shadedF.v.glsl  textured.f.glsl  textured.v.glsl
resources/: minecraft.dds  minecraft.mtl  texasradiofish_-_Funk_n_Jazz_copying.txt
resources/scripts/: main.lua  main.lua~  test.lua  test.lua~
resources/shaders/: basic.f.glsl  basic.v.glsl  deferredLight.f.glsl  deferredLight.v.glsl  deferredShaded.f.glsl  deferredShaded.v.glsl  shaded.f.glsl  shaded.v.glsl
resources/shaders/test/: test_deferredLight1.f.glsl  test_deferredLight2.f.glsl  test_deferredLight3.f.glsl
scripts/: SDL3D_DDS_Texture_Compressor.bat  frameworkify.py
src/: BasicObject.cpp  BasicObject.hpp  Camera.cpp  Camera.h  Camera.hpp  Definitions.h  Definitions.hpp  Definitions.hpp~  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityTracker.cpp  EntityTracker.hpp  GBuffer.cpp  GBuffer.hpp  GLBuffer.cpp  GLBuffer.hpp  GPUBuffer.hpp  GPUFramebuffer.cpp  GPUFramebuffer.hpp  Game.cpp  Game.cpp~  Game.h  Game.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HelperFunctions.cpp  HelperFunctions.h  HelperFunctions.hpp  IncludeLuaIntf.hpp  InputHandler.cpp  InputHandler.h  InputHandler.hpp  InputManager.cpp  InputManager.hpp  Light.cpp  Light.hpp  (+48 more)
tools/: DDS_Compression_Windows.txt  SDL3D_DDS_Texture_Compressor.bat
tools/Frameworkify/: LICENSE
